feat(rents): Pay rent, go to jail, pass go, message logs